fixed input type field

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <H2>Start adding data to the table....</H2>
                             <input type="text" id="sname" placeholder="Enter student name" required><br>
                             <input type="text" id="sid" placeholder="Enter student ID" required><br>
-                            <input type="text" id="smarks" placeholder="Enter marks " required><br>
+                            <input type="number" id="smarks" placeholder="Enter marks " required><br>
                             <input type="submit" value="SAVE" class="btn">
                             <input type="reset" value="CLEAR" class="btn" >
             </form>
